# Multi-LLM-Development-Framework

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  WORKSPACE_STANDARD.md  __main__.py  bootstrap.py  build.py  config.py  content_generators.py  core.py  pyproject.toml
core/: __init__.py  makefile.py  templates.py
core/templates/: __init__.py  configs.py  gemini_md.py  github_workflow.py  schemas.py  scripts_core.py  scripts_skills.py  scripts_snapshot.py
docs/: architecture.md  development.md  quickstart.md  roadmap.md  tools_reference.md
docs/philosophy/: framework_rationale.md
operations/: __init__.py  create.py  creation.py  enterprise.py  output.py  rollback.py  upgrade.py  utils.py  validation.py
providers/: __init__.py  base.py  claude.py  codex.py  gemini.py
scratchpad/: README.md
test-workspace/: .gitignore  GEMINI.md  Makefile  README.md  pyproject.toml
test-workspace/.agent/workflows/: discover_skills.md
test-workspace/.gemini/: workspace.json
test-workspace/.github/workflows/: ci.yml
test-workspace/docs/: roadmap.md
test-workspace/scripts/docs/: index_docs.py
test-workspace/scripts/skills/: explore_skills.py  list_skills.py  manage_skills.py
test-workspace/scripts/workspace/: check_status.py  create_snapshot.py  manage_session.py  run_audit.py
test-workspace/tests/integration/: test_integration.py
test-workspace/tests/unit/: test_test_workspace.py
tests/: test_bootstrap.py
tests/integration/: test_workspace_creation.py
