[project]
name = "gemini-workspace-framework"
version = "1.0.0"
description = "A modular, maintainable framework for building AI-assisted workspaces"
authors = [{name = "Thomas Jamet", email = ""}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "workspace", "framework", "automation", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/thomas-jamet/source-workspace"
Documentation = "https://github.com/thomas-jamet/source-workspace/blob/main/docs/quickstart.md"
Repository = "https://github.com/thomas-jamet/source-workspace"
Issues = "https://github.com/thomas-jamet/source-workspace/issues"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

# Exclude patterns
exclude = [
    "^build\\.py$",
    "^bootstrap\\.py$",
    "^test-workspace/",
    "^tests/",
    "^core/",  # Excluded to avoid conflict with core.py module
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
